# rust-api-template

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  diesel.toml  rustfmt.toml
src/: main.rs
src/common/: db.rs
src/handler/: health.rs  mod.rs
