[package]
name = "rust-api-template"
description = "REST API template written in Rust"
version = "0.0.1"
edition = "2021"
authors = ["Emanuele Civini - emanuele.civini@proton.me"]

[dependencies]
colog = "1.3.0"
diesel = { version = "2.2.2", features = ["postgres"] }
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
